Multiple geotagged sample sets
-Added ability to switch between two sets of samples in geo.html
-Split app.js into three files (anything that starts with "index" shouldn't be used outside of the test index page)
-Removed anthems from index.html
-Renamed geo.js
-Added more countries

--- a/geo.html
+++ b/geo.html
@@ -4,7 +4,11 @@
     @import url(js/Cesium/Widgets/widgets.css);
 </style>
 <div id="cesiumContainer" class="fullSize"></div>
-<body id="body">
+<body>
+    <select id="selector">
+        <option value="anthems">Anthems</option>
+        <option value="enviro">Environmental Sounds</option>
+    </select>
 </body>
 <script src="js/Cesium/Cesium.js"></script>
-<script src="js/geo.js"></script>
+<script src="js/geo-audio.js"></script>
