--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     <button id="tri_btn">Make the first oscillator triangle</button>
     <button id="rand_gen_btn">Play a random tune</button>
     <button id="data_pic_btn">Change the picture</button>
+    <!--
     <button id="start_a_btn">Start Anthems</button>
     <button id="mute_a_btn">Mute Anthems</button>
     <button id="unmute_a_btn">Unmute Anthems</button>
+    -->
     <input id="gen_root" type="number" value="53">
     <!--<input type="range" id="distort_slider" max="0.1" min="0" step="0.01" defaultValue="0.5">-->
     <div id="bus_display" style="pointer-events:none;"></div>
@@ -29,4 +31,6 @@
     <canvas id="display_canvas" width="3600" height="1800" style="z-index:-1; margin-bottom:0px; border:0px; solid #AAA; position:absolute; left:0; top:0;">Canvas didn't work!</canvas>
 </div>
 </body>
-<script src="js/app.js"></script>
+<script src="js/mus.js"></script>
+<script src="js/index-web-audio.js"></script>
+<script src="js/index.js"></script>
