--- a/geo.html
+++ b/geo.html
@@ -9,6 +9,7 @@
         <option value="anthems">Anthems</option>
         <option value="enviro">Environmental Sounds</option>
     </select>
+    <a href="index.html">Back to index</a><br>
 </body>
 <script src="js/Cesium/Cesium.js"></script>
 <script src="js/geo-audio.js"></script>
