--- a/index.html
+++ b/index.html
@@ -15,14 +15,35 @@
     <button id="sqr_btn">Make the first oscillator square</button>
     <button id="saw_btn">Make the first oscillator sawtooth</button>
     <button id="tri_btn">Make the first oscillator triangle</button>
-    <button id="rand_gen_btn">Play a random tune</button>
     <button id="data_pic_btn">Change the picture</button>
     <!--
     <button id="start_a_btn">Start Anthems</button>
     <button id="mute_a_btn">Mute Anthems</button>
     <button id="unmute_a_btn">Unmute Anthems</button>
     -->
+    <p>Root selector: </p>
     <input id="gen_root" type="number" value="53">
+    <p>Scale selector: </p>
+    <select id="scale_selector">
+        <option value="maj_scale">Major Scale</option>
+        <option value="min_scale">Minor Scale</option>
+        <option value="maj_pentatonic">Major Pentatonic Scale</option>
+        <option value="min_pentatonic">Minor Pentatonic Scale</option>
+        <option value="min_blues">Minor Blues Scale</option>
+        <option value="maj_blues">Major Blues Scale</option>
+        <option value="mixolydian">Mixolydian Scale</option>
+    </select>
+    <p>Starting chord: </p>
+    <select id="start_selector">
+        <option value="I">I</option>
+        <option value="i">i</option>
+    </select>
+    <p>Number of phrases: </p>
+    <input id="gen_phr" type="number" value="20">
+    <p>Notes per phrase: </p>
+    <input id="gen_n_phr" type="number" value="8">
+    <p>Total duration: </p>
+    <input id="gen_dur" type="number" value="20">
     <!--<input type="range" id="distort_slider" max="0.1" min="0" step="0.01" defaultValue="0.5">-->
     <div id="bus_display" style="pointer-events:none;"></div>
     
