Cleanup, added anthems, proximity-based sample triggering (buggy), generation repetition
-Moved data images
-Added all anthems played by US Navy Band available online
-Added new impulse response
-New method for loading multiple URLs with XHR request and loading samples based on lat/long proximity (currently buggy and may crash)
-Removed obsolete sample test from index.js
-Added repetition for random music generator

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     }
 </style>
 <body id="body">
-    <p>Press ` to play a melody!</p>
+    <p>Press ` to play a melody! If the picture doesn't display at first, hit "Change the picture" until it does</p>
     <a href="geo.html">Cesium/geo</a><br>
     <button id="start_btn">Start Synths</button>
     <button id="mute_btn">Mute Synths</button>
@@ -38,7 +38,7 @@
         <option value="min_pentatonic">Minor Pentatonic Scale</option>
         <option value="min_blues">Minor Blues Scale</option>
         <option value="maj_blues">Major Blues Scale</option>
-        <option value="mixolydian">Mixolydian Scale</option>
+        <option value="mixolydian">Mixolydian "Scale"</option>
     </select>
     <p>Starting chord: </p>
     <select id="start_selector">
