--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </style>
 <body id="body">
     <p>Press ` to play a melody! If the picture doesn't display at first, hit "Change the picture" until it does</p>
-    <a href="geo.html">Cesium/geo</a><br>
+    <a href="geo_prox.html">Geotagged audio (experimental)</a><br><a href="geo.html">Geotagged audio (demo)</a><br>
     <button id="start_btn">Start Synths</button>
     <button id="mute_btn">Mute Synths</button>
     <button id="unmute_btn">Unmute Synths</button>
