Web workers, HTML5 Audio
-Web worker support for multiple_xhr method
-Created new version of geo_audio webpage that uses HTML5 Audio which doesn't leak memory (at least on Chrome)
-Debugging button for stress testing fnd_prox_nodes method

--- a/geo_prox_html5.html
+++ b/geo_prox_html5.html
@@ -6,11 +6,11 @@
 <div id="cesiumContainer" class="fullSize"></div>
 <body>
     <select id="selector">
-        <option value="anthems">World Anthems</option>
-        <option value="enviro">Environmental Sounds</option>
+        <option value="0">World Anthems</option>
+        <option value="1">Environmental Sounds</option>
     </select>
     <a href="index.html">Back to index</a><br>
     <button id="rlb">Random location 100x</button>
 </body>
 <script src="js/Cesium/Cesium.js"></script>
-<script src="js/geo-audio-prox.js"></script>
+<script src="js/geo-audio-prox-html5.js"></script>
