Mute, new data picture, try pause
-Added mute/unmute button
-Added a new data set (currently inaccessible)
-Try/catch pause so it doesn't keep filling the console with error messages that you can't pause() while you're play()ing
-Changed impulse for synths and some other synth settings(minor)

--- a/geo_prox_html5.html
+++ b/geo_prox_html5.html
@@ -11,6 +11,8 @@
     </select>
     <a href="index.html">Back to index</a><br>
     <button id="rlb">Random location 100x</button>
+    <button id="mute_btn">Mute</button>
+	<button disabled id="unmute_btn">Unmute</button>
 </body>
 <script src="js/Cesium/Cesium.js"></script>
 <script src="js/geo-audio-prox-html5.js"></script>
