--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     <p>Notes per phrase: </p>
     <input id="gen_n_phr" type="number" value="8">
     <p>Total duration: </p>
-    <input id="gen_dur" type="number" value="20">
+    <input id="gen_dur" type="number" value="80">
     <p>Dissonance: <div id="dis">0</div></p>
-    <input type="range" id="vol_slider" max="0.3" min="0" step="0.01" defaultValue="0.01">
+    <input type="range" id="vol_slider" max="0.7" min="0" step="0.01" value="0.01">
     <div id="bus_display" style="pointer-events:none;"></div>
     
 <div style="margin-top:50px">
