--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </style>
 <body id="body">
     <p>Press ` to play a melody!</p>
-    <a href="geo_prox.html">Geotagged audio (Web Audio API only; leaks memory like crazy and it's Chrome's fault)</a><br><a href="geo.html">Geotagged audio (demo)</a><br><a href="geo_prox_html5.html">Geotagged audio (Mix of HTML5 and Web Audio API - still devours RAM but doesn't crash Chrome immediately)</a><br>
+    <br><a href="geo.html">Geotagged audio (demo)</a><br><a href="geo_prox_html5.html">Geotagged audio (Mix of HTML5 and Web Audio API - still devours RAM but doesn't crash Chrome immediately)</a><br><a href="loop.html">Loop.html</a><br>
     <button id="start_btn">Start Synths</button>
     <button id="mute_btn">Mute Synths</button>
     <button id="unmute_btn">Unmute Synths</button>
