Cesium imagery layer swapping
-Fixed locations of Algeria, Mauritania, Albania
-Slider for changing imagery layer on Cesium.js (may bug out)

--- a/geo_prox_html5.html
+++ b/geo_prox_html5.html
@@ -13,6 +13,7 @@
     <button id="rlb">Random location 100x</button>
     <button id="mute_btn">Mute</button>
 	<button disabled id="unmute_btn">Unmute</button>
+	<input type="range" id="data_pic_slider" max="11" min="0" step="1" value="0">
 </body>
 <script src="js/Cesium/Cesium.js"></script>
 <script src="js/geo-audio-prox-html5.js"></script>
