--- a/index.html
+++ b/index.html
@@ -13,11 +13,10 @@
 </style>
 <body id="body">
     <p>Press ` to play a melody!</p>
-    <br><a href="geo.html">Geotagged audio (demo)</a><br><a href="geo_prox_html5.html">Geotagged audio (Mix of HTML5 and Web Audio API - still devours RAM but doesn't crash Chrome immediately)</a><br><a href="loop.html">Loop.html</a><br>
+    <br><a href="geo.html">Geotagged audio (demo)</a><br><a href="geo_prox_html5.html">Geotagged audio (Mix of HTML5 and Web Audio API - still devours RAM but doesn't crash Chrome immediately)</a><br><a href="loop.html">Loop.html</a><br><a href="midi.html">Midi.html</a><br>
     <button id="start_btn">Start Synths</button>
     <button id="mute_btn">Mute Synths</button>
-    <button id="unmute_btn">Unmute Synths</button>
-    <button id="convolve_btn">Add a convolver</button>
+	<button id="unmute_btn">Unmute Synths</button>
     <button id="sin_btn">Make the first oscillator sin</button>
     <button id="sqr_btn">Make the first oscillator square</button>
     <button id="saw_btn">Make the first oscillator sawtooth</button>
