Flags, node.js, json
-Added the flags of Kosovo and South Sudan
-Website can be run on a very unsafe node.js HTTP server
-CSS in separate file
-Sound URLs and information are now stored in json format file (the goal is to be able to create more of these)

--- a/geo_prox_html5.html
+++ b/geo_prox_html5.html
@@ -1,50 +1,16 @@
 <!DOCTYPE HTML>
 <!-- Cesium! -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
-<style>
-    @import url(js/Cesium/Widgets/widgets.css);
-	body {
-		background-color: #111;
-		font-family: "Open Sans";
-		color:dodgerblue;
-	}
-	button {
-		border: 5px;
-		border-radius: 5px;
-		margin:5px;
-		margin-bottom:20px;
-		padding:10px;
-		font-family: "Open Sans";
-		color:dodgerblue;
-		background-color:#222;
-		outline:0;
-	}
-	button:hover {
-		cursor: pointer;
-		background-color:#333;
-	}
-	button:disabled {
-		color:#444;
-	}
-	select {
-		border: 5px;
-		border-radius: 5px;
-		padding:10px;
-		font-family: "Open Sans";
-		color:dodgerblue;
-		background-color:#222;
-		outline:0;
-	}
-</style>
+<link rel="stylesheet" type="text/css" href="css/geo_audio.css">
 <body>
 	<h1 style="display:inline; margin-right:5px;">placeholder </h1>
     <select id="selector">
-        <option value="0">World Anthems</option>
-        <option value="1">USA Environment</option>
     </select>
     <a href="index.html"><button>Back to index</button></a>
     <button id="mute_btn">Mute</button>
 	<button disabled id="unmute_btn">Unmute</button>
+    <div style="display:inline; margin:5px;">Information</div>
+    <div style="display:inline; margin:5px; font-size:12px;">If a sound doesn't play, try moving away from it and moving towards it again</div>
 	<div id="cesiumContainer" draggable="true" class="fullSize"></div>
 	<!--<input type="range" id="data_pic_slider" max="11" min="0" step="1" value="0">-->
 </body>
