--- a/geo_prox_html5.html
+++ b/geo_prox_html5.html
@@ -2,16 +2,22 @@
 <!-- Cesium! -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/geo_audio.css">
-<body>
+<body id="body"> <!--kek-->
 	<h1 style="display:inline; margin-right:5px;">placeholder </h1>
     <select id="selector">
     </select>
     <a href="index.html"><button>Back to index</button></a>
     <button id="mute_btn">Mute</button>
 	<button disabled id="unmute_btn">Unmute</button>
-    <div style="display:inline; margin:5px;">Information</div>
-    <div style="display:inline; margin:5px; font-size:12px;">If a sound doesn't play, try moving away from it and moving towards it again</div>
+    <div style="display:inline; margin:5px;">Password</div>
+    <input id="password" type="password" value="15745174251456">
+    <div style="display:inline; margin:5px;">Set Name</div>
+    <input id="set_name" value="">
+    <button id="post_btn">Post</button>
+    <div id="geo-note" style="display:inline; margin:0px; line-height:0px; color:silver; font-size: 12px;"></div>
 	<div id="cesiumContainer" draggable="true" class="fullSize"></div>
+    <div style="display:inline; margin:5px; font-size:12px;">If a sound doesn't play, try moving away from it and moving towards it again</div>
+    
 	<!--<input type="range" id="data_pic_slider" max="11" min="0" step="1" value="0">-->
 </body>
 <script src="js/Cesium/Cesium.js"></script>
