Undo/redo, fixes
-No more password logging
-Proper response for posting a set
-Undo/redo for new/delete sound
-More comments

--- a/geo_prox_html5.html
+++ b/geo_prox_html5.html
@@ -16,7 +16,10 @@
     <div id="geo-note" style="display:inline; margin:0px; line-height:0px; color:silver; font-size: 12px;"></div>
 	<div id="cesiumContainer" draggable="true" class="fullSize"></div>
     <div style="display:inline; margin:5px; font-size:12px;">If a sound doesn't play, try moving away from it and moving towards it again</div>
-	<!--<input type="range" id="data_pic_slider" max="11" min="0" step="1" value="0">-->
+    <div id="audio-div">
+    
+    </div> <!--Super hacky-->
+    <!--<input type="range" id="data_pic_slider" max="11" min="0" step="1" value="0">-->
 </body>
 <script src="js/Cesium/Cesium.js"></script>
 <script src="js/geo-audio-prox-html5.js"></script>
