Continuous generation, git ignore node_modules
-Button to continuously generate from mix of buffers
-Git ignores node_modules

--- a/midi.html
+++ b/midi.html
@@ -4,6 +4,8 @@
 <button id="gen">Generate</button>
 <button id="genrn">Generate (note-rhythm dependent)</button>
 <button id="clear">Clear buffer</button>
+<button id="genc">Generate (continuous)</button>
+<button id="genp">Pause generation</button>
 	<input type="range" id="data_pic_slider" max="2" min="0" step="1" value="0">
 	
 <div style="margin-top:50px">
