--- a/geo_prox_html5.html
+++ b/geo_prox_html5.html
@@ -3,7 +3,7 @@
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/geo_audio.css">
 <body id="body"> <!--kek-->
-	<h1 style="display:inline; margin-right:5px;">placeholder </h1>
+	<h1 style="display:inline; margin-right:5px;">geo-audio </h1>
     <select id="selector">
     </select>
     <button id="mute_btn">Mute</button>
@@ -16,10 +16,6 @@
     <div id="geo-note" style="display:inline; margin:0px; line-height:0px; color:silver; font-size: 12px;"></div>
 	<div id="cesiumContainer" draggable="true" class="fullSize"></div>
     <div style="display:inline; margin:5px; font-size:12px;">If a sound doesn't play, try moving away from it and moving towards it again. If sounds consistently do not play, try refreshing the page.</div>
-    <div id="audio-div">
-    
-    </div> <!--Super hacky-->
-    <!--<input type="range" id="data_pic_slider" max="11" min="0" step="1" value="0">-->
 </body>
 <script src="js/Cesium/Cesium.js"></script>
 <script src="js/geo-audio-prox-html5.js"></script>
