Removes dangerous debugging thing

--- a/geo_prox_html5.html
+++ b/geo_prox_html5.html
@@ -2,7 +2,7 @@
 <!-- Cesium! -->
 <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 <link rel="stylesheet" type="text/css" href="css/geo_audio.css">
-<body id="body"> <!--kek-->
+<body id="body">
 	<h1 style="display:inline; margin-right:5px;">geo-audio </h1>
     <select id="selector">
     </select>
